Compiles, but can't boot, forge can't load classpath deps just yet.