@@ -1,14 +1,8 @@
 package io.github.apace100.apoli.util;
 
 import com.google.common.collect.Lists;
-import io.github.apace100.apoli.component.PowerHolderComponent;
-import io.github.apace100.apoli.mixin.CraftingInventoryAccessor;
-import io.github.apace100.apoli.mixin.CraftingScreenHandlerAccessor;
-import io.github.apace100.apoli.mixin.PlayerScreenHandlerAccessor;
-import io.github.apace100.apoli.power.RecipePower;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import dev.experimental.apoli.api.component.IPowerContainer;
+import dev.experimental.apoli.common.registry.ModPowers;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.inventory.AbstractContainerMenu;
@@ -22,63 +16,66 @@ import net.minecraft.world.item.crafting.RecipeSerializer;
 import net.minecraft.world.item.crafting.SimpleRecipeSerializer;
 import net.minecraft.world.level.Level;
 
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
+
 public class PowerRestrictedCraftingRecipe extends CustomRecipe {
 
-    public static final RecipeSerializer<?> SERIALIZER = new SimpleRecipeSerializer<>(PowerRestrictedCraftingRecipe::new);
+	public static final RecipeSerializer<?> SERIALIZER = new SimpleRecipeSerializer<>(PowerRestrictedCraftingRecipe::new);
 
-    public PowerRestrictedCraftingRecipe(ResourceLocation id) {
-        super(id);
-    }
+	public PowerRestrictedCraftingRecipe(ResourceLocation id) {
+		super(id);
+	}
 
-    @Override
-    public boolean matches(CraftingContainer inv, Level world) {
-        return getRecipes(inv).stream().anyMatch(r -> r.matches(inv, world));
-    }
+	@Override
+	public boolean matches(CraftingContainer inv, Level world) {
+		return this.getRecipes(inv).stream().anyMatch(r -> r.matches(inv, world));
+	}
 
-    @Override
-    public ItemStack craft(CraftingContainer inv) {
-        Player player = getPlayerFromInventory(inv);
-        if(player != null) {
-            Optional<Recipe<CraftingContainer>> optional = getRecipes(inv).stream().filter(r -> r.matches(inv, player.level)).findFirst();
-            if(optional.isPresent()) {
-                Recipe<CraftingContainer> recipe = optional.get();
-                return recipe.assemble(inv);
-            }
-        }
-        return ItemStack.EMPTY;
-    }
+	@Override
+	public ItemStack assemble(CraftingContainer inv) {
+		Player player = this.getPlayerFromInventory(inv);
+		if (player != null) {
+			Optional<Recipe<CraftingContainer>> optional = this.getRecipes(inv).stream().filter(r -> r.matches(inv, player.level)).findFirst();
+			if (optional.isPresent()) {
+				Recipe<CraftingContainer> recipe = optional.get();
+				return recipe.assemble(inv);
+			}
+		}
+		return ItemStack.EMPTY;
+	}
 
-    @Override
-    public boolean canCraftInDimensions(int width, int height) {
-        return true;
-    }
+	@Override
+	public boolean canCraftInDimensions(int width, int height) {
+		return true;
+	}
 
-    @Override
-    public RecipeSerializer<?> getSerializer() {
-        return SERIALIZER;
-    }
+	@Override
+	public RecipeSerializer<?> getSerializer() {
+		return SERIALIZER;
+	}
 
-    private Player getPlayerFromInventory(CraftingContainer inv) {
-        AbstractContainerMenu handler = ((CraftingInventoryAccessor)inv).getHandler();
-        return getPlayerFromHandler(handler);
-    }
+	private Player getPlayerFromInventory(CraftingContainer inv) {
+		return this.getPlayerFromHandler(inv.menu);
+	}
 
-    private List<Recipe<CraftingContainer>> getRecipes(CraftingContainer inv) {
-        AbstractContainerMenu handler = ((CraftingInventoryAccessor)inv).getHandler();
-        Player player = getPlayerFromHandler(handler);
-        if(player != null) {
-            return PowerHolderComponent.getPowers(player, RecipePower.class).stream().map(RecipePower::getRecipe).collect(Collectors.toList());
-        }
-        return Lists.newArrayList();
-    }
+	@SuppressWarnings("unchecked")
+	private List<Recipe<CraftingContainer>> getRecipes(CraftingContainer inv) {
+		Player player = this.getPlayerFromHandler(inv.menu);
+		if (player != null) {
+			return IPowerContainer.getPowers(player, ModPowers.RECIPE.get()).stream().map(x -> (Recipe<CraftingContainer>) x.getConfiguration().value()).toList();
+		}
+		return Lists.newArrayList();
+	}
 
-    private Player getPlayerFromHandler(AbstractContainerMenu screenHandler) {
-        if(screenHandler instanceof CraftingMenu) {
-            return ((CraftingScreenHandlerAccessor)screenHandler).getPlayer();
-        }
-        if(screenHandler instanceof InventoryMenu) {
-            return ((PlayerScreenHandlerAccessor)screenHandler).getOwner();
-        }
-        return null;
-    }
+	private Player getPlayerFromHandler(AbstractContainerMenu screenHandler) {
+		if (screenHandler instanceof CraftingMenu menu) {
+			return menu.player;
+		}
+		if (screenHandler instanceof InventoryMenu menu) {
+			return menu.owner;
+		}
+		return null;
+	}
 }
